@@ -1,5 +1,5 @@
 /*
- * $Id: save.h,v 1.19 2014/10/04 22:30:50 sfeam Exp $
+ * $Id: save.h,v 1.20 2014/10/04 22:39:25 sfeam Exp $
  */
 
 /* GNUPLOT - save.h */
@@ -56,6 +56,7 @@ void save_term __PROTO((FILE *fp));
 void save_all __PROTO((FILE *fp));
 void save_position __PROTO((FILE *, struct position *, TBOOLEAN));
 void save_range __PROTO((FILE *, AXIS_INDEX));
+void save_prange __PROTO((FILE *, struct axis *));
 void save_textcolor __PROTO((FILE *, const struct t_colorspec *));
 void save_pm3dcolor __PROTO((FILE *, const struct t_colorspec *));
 void save_fillstyle __PROTO((FILE *, const struct fill_style_type *));
@@ -68,6 +69,6 @@ void save_style_parallel __PROTO((FILE *));
 void save_data_func_style __PROTO((FILE *, const char *, enum PLOT_STYLE));
 void save_linetype __PROTO((FILE *, lp_style_type *, TBOOLEAN));
 void save_dashtype __PROTO((FILE *, int, const t_dashtype *));
-void save_num_or_time_input __PROTO((FILE *, double x, AXIS_INDEX axis));
+void save_num_or_time_input __PROTO((FILE *, double x, struct axis *));
 
 #endif /* GNUPLOT_SAVE_H */
